# server-stock

./: .env.example  .gitignore  CLAUDE.md  README.md  REPORT.md  SUMMARY.md  db.js  package-lock.json  package.json  pyproject.toml  pyproject.toml.old  server.js
compose/: docker-compose.yml
compose/app/: Dockerfile
compose/pg-18/: postgresql.conf
compose/pg-18/conf.d/: 20-memory.conf
db/: servers.db
public/: app.js  index.html  style.css
server_stock/: app.py  demo_data.xml
src/server_stock/: app.py
