[project]
name = "server-stock"
version = "0.1.0"
description = "Server Management Web Application"
authors = [
    {name = "Joan Sarola"}
]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.0.0)",
    "flask-sqlalchemy (>=3.1.1)",
    "flask-cors (>=4.0.0)",
    "werkzeug (>=3.0.1)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
