[project]
name = "server-stock"
version = "0.1.0"
description = "Server Management Web Application"
authors = [
    {name = "Joan Sarola"}
]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.0.0)",
    "flask-sqlalchemy (>=3.1.1)",
    "flask-cors (>=4.0.0)",
    "werkzeug (>=3.0.1)",
    "psycopg2-binary (>=2.9.0)",
    "python-dotenv (>=1.0.0)",
]

[tool.poetry]
name = "server-stock"
version = "0.1.0"
description = "Server Management Web Application"
authors = ["Joan Sarola <joan.sarola@example.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
werkzeug = "^3.0.1"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
start = "server_stock.app:main"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
